Update manifest.json to removed ad prefix

--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "id": "cdd9ba7e-725a-4c78-8ca2-a1d2072eedf2",
     "authors": [
-        "Falaxir - Made with AMP Config Generator"
+        "Falaxir "
     ],
-    "origin": "https://github.com/Falaxir - Made with AMP Config Generator/AMPTemplates.git",
-    "url": "https://github.com/Falaxir - Made with AMP Config Generator/AMPTemplates",
+    "origin": "https://github.com/Falaxir ",
+    "url": "https://github.com/Falaxir ",
     "imagefile": "",
-    "prefix": "Falaxir - Made with AMP Config Generator"
+    "prefix": "Falaxir "
 }
