Update nanos-worldconfig.json change default value of default map

--- a/nanos-worldconfig.json
+++ b/nanos-worldconfig.json
@@ -43,8 +43,8 @@
         "IsFlagArgument": false,
         "ParamFieldName": "map",
         "IncludeInCommandLine": true,
-        "DefaultValue": "nanos-world::TestingMap",
-        "Placeholder": "nanos-world::TestingMap",
+        "DefaultValue": "default-testing-map",
+        "Placeholder": "default-testing-map",
         "Suffix": "",
         "Hidden": false,
         "SkipIfEmpty": false,
