--- a/nanos-worldconfig.json
+++ b/nanos-worldconfig.json
@@ -116,7 +116,8 @@
         "DefaultValue": "public",
         "EnumValues": {
             "public": "Public (default)",
-            "bleeding-edge": "Bleeding Edge"
+            "bleeding-edge": "Bleeding Edge",
+            "halloween-test": "Halloween playtest (temporary event)"
         }
     }
 ]
