--- a/team-fortress2-classifiedmetaconfig.json
+++ b/team-fortress2-classifiedmetaconfig.json
@@ -1,12 +1,12 @@
 [
     {
-        "ConfigFile": "tf/cfg/server.cfg",
+        "ConfigFile": "tf2classified/cfg/server.cfg",
         "AutoMap": true,
         "ConfigType": "template",
         "ConfigFileTemplate": "tf2/AMP_server.cfg"
     },
     {
-        "ConfigFile": "tf/cfg/mapcycle.txt",
+        "ConfigFile": "tf2classified/cfg/mapcycle.txt",
         "ConfigType": "kvp",
         "ConfigFormat": "{0}{1}",
         "Subsections": [
