fix: path reworks tf2c

--- a/team-fortress2-classifiedmetaconfig.json
+++ b/team-fortress2-classifiedmetaconfig.json
@@ -3,7 +3,7 @@
         "ConfigFile": "tf2classified/cfg/server.cfg",
         "AutoMap": true,
         "ConfigType": "template",
-        "ConfigFileTemplate": "tf2/AMP_server.cfg"
+        "ConfigFileTemplate": "tf2c/AMP_server.cfg"
     },
     {
         "ConfigFile": "tf2classified/cfg/mapcycle.txt",
